[package]
name = "trace-moe"
version = "1.0.1"
edition = "2024"
description = "Client library for the trace.moe anime scene search API."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/benz206/trace-moe"
documentation = "https://docs.rs/trace-moe"

[dependencies]
reqwest = { version = "0.12", features = ["json", "gzip", "brotli", "deflate", "stream", "multipart"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
url = "2"
